--- a/_posts/2020-3-30-velero.md
+++ b/_posts/2020-3-30-velero.md
@@ -16,7 +16,7 @@ Kubernetes disaster-recovery is an essential feature in the production environme
 
 Indeed, we can customize the backup method for each of applications, such as `mysqldump` for `MySQL` or `MariaDB`, `bgsave` for `Redis` and so on, and that what we actually did in the past. The advantage of this approach is that we can ignore the low-level storage details while the obvious drawback is that the workload for specifying backup methods continues to increase as the number of applications grows, which makes it hard to maintain and automate the backup.      
 
-To solve this problem, we want to find an uniform way to do `bur`(backup and restore) regardless of the type of application and [Kubernetes Persistent Volume](https://kubernetes.io/docs/concepts/storage/persistent-volumes/#types-of-persistent-volumes), and velero comes into our sight.
+To solve this problem, we need to find an uniform way to do `bur`(backup and restore) regardless of the type of application and [Kubernetes Persistent Volume](https://kubernetes.io/docs/concepts/storage/persistent-volumes/#types-of-persistent-volumes), and velero comes into our sight.
 
 ## Velero Introduction
 
@@ -528,12 +528,98 @@ $ velero restore create --from-backup delete-policy-3
 194.70.0.1 - - [07/Apr/2020:11:39:36 +0000] "GET / HTTP/1.1" 200 612 "-" "curl/7.29.0" "-"
 ```
 
+#### <font color="#dd0000">CSI Persistent Volume Support</font><br />
+
+Let's do a simple test with [csi-driver-nfs](https://github.com/kubernetes-csi/csi-driver-nfs) as below:
+
+```bash
+# step1: deploy nfs server
+$ docker run -d --net=bridge --privileged --name nfs-server mnagy/nfs-server /exports/foo
+$ mount <CONTAINER_IP>:/exports/foo /mnt/foo
+# step2: deploy csi-driver-nfs
+$ git clone https://github.com/kubernetes-csi/csi-driver-nfs.git
+$ cd csi-driver-nfs && kubectl -f deploy/kubernetes create
+# step3: create nginx pod with nfs volume
+# Refers to https://github.com/kubernetes-csi/csi-driver-nfs/blob/master/examples/kubernetes/nginx.yaml
+$ kubectl -n nfs -f examples/kubernetes/nginx.yaml create
+# step4: annotation
+$ kubectl -n nfs annotate pods/nginx backup.velero.io/backup-volumes=data-nfsplugin
+# step5: add file to volume
+$ echo "hello world" > /mnt/foo/testfile
+# step6: create velero backup
+$ velero backup create nfs-csi-test --include-namespaces nfs
+$ velero backup describe nfs-csi-test --details
+Name:         nfs-csi-test
+Namespace:    velero
+Labels:       velero.io/storage-location=default
+Annotations:  <none>
+
+Phase:  Completed
+
+Namespaces:
+  Included:  nfs
+  Excluded:  <none>
+
+  v1/Namespace:
+    - nfs
+  v1/PersistentVolume:
+    - data-nfsplugin
+  v1/PersistentVolumeClaim:
+    - nfs/data-nfsplugin
+  v1/Pod:
+    - nfs/nginx
+
+Persistent Volumes: <none included>
+
+Restic Backups:
+  Completed:
+    nfs/nginx: data-nfsplugin
+
+# step7: delete ns nfs
+$ kubectl delete ns nfs
+# step8: create velero restore
+$ velero restore create --from-backup nfs-csi-test
+$ velero restore describe nfs-csi-test-20200409123021 --details
+Name:         nfs-csi-test-20200409123021
+Namespace:    velero
+Labels:       <none>
+Annotations:  <none>
+
+Phase:  Completed
+
+Backup:  nfs-csi-test
+
+Namespace mappings:  <none>
+
+Restic Restores:
+  Completed:
+    nfs/nginx: data-nfsplugin
+
+$ tree /var/lib/kubelet/pods/55dcb0a2-b64d-4fba-8911-7ca004f6834b/volumes/kubernetes.io~csi/data-nfsplugin/ -al
+/var/lib/kubelet/pods/55dcb0a2-b64d-4fba-8911-7ca004f6834b/volumes/kubernetes.io~csi/data-nfsplugin/
+|-- mount
+|   |-- .velero
+|   |   `-- c671c64a-9a25-40e2-820d-fcdb585cfdfb
+|   `-- testfile
+`-- vol_data.json
+
+2 directories, 3 files
+
+$ cat /var/lib/kubelet/pods/55dcb0a2-b64d-4fba-8911-7ca004f6834b/volumes/kubernetes.io~csi/data-nfsplugin/mount/.velero/c671c64a-9a25-40e2-820d-fcdb585cfdfb
+[...empty...]
+
+# step9: check application state - ok
+$ cat /var/lib/kubelet/pods/55dcb0a2-b64d-4fba-8911-7ca004f6834b/volumes/kubernetes.io~csi/data-nfsplugin/mount/testfile
+hello world
+```
+
 ## Conclusion
 
 This article is more like a practical guide than theory analysis, stays tuned as this evolves.  
  
 ## Refs
 
+* [Append "/mount" to directory for CSI volumes](https://github.com/vmware-tanzu/velero/pull/1615)
 * [Add backup annotation](https://github.com/vmware-tanzu/velero/blob/master/site/docs/master/restic.md#add-backup-annotation)
 * [Velero Community Meetings](https://www.youtube.com/playlist?list=PL7bmigfV0EqQRysvqvqOtRNk4L5S7uqwM&app=desktop)
 * [Restore using Restic](https://blog.kubernauts.io/backup-and-restore-pvcs-using-velero-with-restic-and-openebs-from-baremetal-cluster-to-aws-d3ac54386109)
