--- a/_posts/2020-3-30-velero.md
+++ b/_posts/2020-3-30-velero.md
@@ -229,6 +229,8 @@ $ kubectl exec nginx-deployment-7d46f5c9d-s6w6z -nnginx-example -- cat /var/log/
 
 ## Kubernetes cluster BUR Process with Restic Integration
 
+![](/public/img/velero/bur_process.png) 
+
 We can backup Kubernetes cluster regularly and restore it when disaster happens as below:
 
 1. Add annotations for pods with persistent volumes by hand
