--- a/_posts/2020-5-1-eagle.md
+++ b/_posts/2020-5-1-eagle.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title:  
+title:  自研P2P镜像分发解决方案 - Eagle
 date: 2020-5-1 19:10:31
 category: 技术
 tags: Docker Docker-registry P2P golang
-excerpt: ​本文介绍了自研p2p镜像分发解决方案 - Eagle
+excerpt: ​本文介绍了自研P2P镜像分发解决方案 - Eagle
 ---
 
 ## Overview
