--- a/_posts/2020-5-1-eagle.md
+++ b/_posts/2020-5-1-eagle.md
@@ -9,10 +9,10 @@ excerpt: ​本文介绍了自研P2P镜像分发解决方案 - Eagle
 
 # Overview
 
-镜像p2p主要用于解决大规模容器分发场景下的镜像拉取性能问题，目前主流的开源解决方案有[Dragonfly](https://github.com/dragonflyoss/Dragonfly)(Alibaba)以及[Kraken](https://github.com/uber/kraken)，
+镜像P2P主要用于解决大规模容器分发场景下的镜像拉取性能问题，目前主流的开源解决方案有[Dragonfly](https://github.com/dragonflyoss/Dragonfly)(Alibaba)以及[Kraken](https://github.com/uber/kraken)(Uber)，
 这两种解决方案各有优缺点，设计模式也各有不同：
 
-* Dragonfly：采用supernode中心控制设计模式，所有的peer数据传输任务以及任务的调度都由supernode负责，整个集群将管理集中在supernode组件
+* Dragonfly：采用supernode中心控制设计模式，所有的peer数据传输任务都由supernode负责调度，整个集群将管理集中在supernode组件
 * Kraken：采用随机分散设计模式，Tracker组件只负责管理所有peer的连接信息(包括各个peer拥有的数据)，而实际的数据传输流程则交由各个peer自行协商决定
 
 [Eagle](https://github.com/duyanghao/Eagle)参考了[Dragonfly](https://github.com/dragonflyoss/Dragonfly)，[Kraken](https://github.com/uber/kraken)以及[FID](https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8064123)的原理和特性。
@@ -204,7 +204,7 @@ type Storage interface {
 
 ### LRUCache
 
-为了实现Cache的定期清理，Eagle实现了`thread-safe LRUCache`算法，该算法会删除最久未使用的镜像分层文件，以腾出Cache空间，并增加Cache命中率；另外该算法实现了在Cache不命中的情况下，只从远端获取一次的并发控制逻辑：
+为了实现Cache的定期清理，Eagle实现了`thread-safe LRUCache`算法，该算法会删除最久未使用的镜像分层文件，以腾出Cache空间，同时增加Cache命中率；另外该算法实现了在Cache不命中的情况下，只从远端获取一次数据的并发控制逻辑：
 
 ```go
 // EvictCallback is used to get a callback when a cache entry is evicted
@@ -236,7 +236,7 @@ type Entry struct {
 
 ### Code Structure
 
-为了使Eagle代码结构看起来尽可能清晰，Eagle各组件均采用了相同的代码结构，如下：
+为了使Eagle项目结构看起来尽可能清晰，Eagle各组件均采用了相同的代码结构，如下：
 
 ```bash
 $ tree seeder
@@ -329,7 +329,7 @@ func Run(flags *Flags) {
 
 ### High Availability
 
-#### client-side
+#### 1. client-side
 
 目前Eagle从代码层面实现了基于`client-side`端的高可用设计
 
@@ -343,11 +343,11 @@ Eagle参考[etcd clientv3-grpc1.23 Balancer](https://github.com/duyanghao/Eagle/
 
 * Tracker
 
-目前Tracker端的高可用方案采用的是[BT](http://bittorrent.org/beps/bep_0003.html)协议中的`announce-list`字段。简单来说，就是`BT client`会向每个tracker发出announce间隔请求，之后BT下载过程中会选择其中一个tracker获取Peer列表信息，进行下载操作，如果其中某一个tracker挂掉了，则可以向其它tracker发出请求，从而实现高可用
+目前Tracker端的高可用方案采用的是[BT](http://bittorrent.org/beps/bep_0003.html)协议中的`announce-list`字段。简单来说，就是`BT client`会向每个Tracker发出announce间隔请求，之后BT下载过程中会选择其中一个Tracker获取Peer列表信息和数据下载状态，进行下载操作，如果其中某一个Tracker挂掉了，则可以向其它Tracker发出相同请求，从而实现高可用
 
-#### server-side
+#### 2. server-side
 
-用户可以从架构层面来实现`server-side`的高可用方案，最通用和简单的设计就是采用VIP的方案。Eagle对接VIP，而VIP后面对接Seeder和Tracker，从而实现高可用。Seeder高可用架构图如下：
+用户可以从架构层面来实现`server-side`端的高可用方案，最通用和简单的设计就是采用VIP的方案。Eagle对接VIP，而VIP后面对接Seeder和Tracker，从而实现高可用。Seeder高可用架构图如下：
 
 ![](/public/img/eagle/ha/vip_ha.png)
 
@@ -357,11 +357,11 @@ Tracker依次类推
 
 目前社区最流行的P2P解决方案当属[Dragonfly](https://github.com/dragonflyoss/Dragonfly)，Dragonfly提供了许多生产环境需要使用的功能，比如：`断点续传`，`母机限速`以及`跨IDC解决方案`等。但是Dragonfly最大的问题就是它的supernode中心设计。在这种设计中，supernode需要管理整个P2P网络中的所有节点数据传输，理论上可以实现全局的最佳分配算法，但是确很难落地实现。所以实际使用中，随着镜像分层大小增加以及集群规模扩大，整个Dragonfly系统会线性变慢。另外Dragonfly不支持supernode节点的高可用部署，这也是致命的一个缺点
 
-Kraken在设计理论上区分于Dragonfly，采用了分散式设计。Tracker节点只负责管理节点的连接信息，不负责具体的数据传输分配协商，理论上可以更好地支持集群规模的快速增长。另外Kraken在BT协议基础上定制了传输协议，以更大程度提高传输效率
+[Kraken](https://github.com/uber/kraken)在设计理论上区分于Dragonfly，采用了分散式设计。Tracker只负责管理各节点的连接信息，不负责具体的数据传输分配协商，虽然理论上可以更好地支持集群规模的快速增长。另外Kraken在BT协议基础上定制了传输协议，以更大程度提高传输效率
 
-相比Dragonfly和Kraken，Eagle原理简单，支持的特性有限，轻便而精简
+相比Dragonfly和Kraken，Eagle原理简单，支持的特性有限。轻便，精简而实用
 
-对于如何选择P2P解决方案，我的建议是：Dragonfly和Kraken功能都足够庞大，且在企业生产环境中有落地，但是对应的，维护成本也较大；而如果你想选择一个维护成本更小，更加轻量级的解决方案，那么Eagle就是首选
+对于如何选择P2P解决方案，我的建议是：Dragonfly和Kraken功能都足够庞大，且在企业生产环境中均有落地，但是相应的运维成本也较大；而如果你想选择一个维护成本更小，更加轻量级的解决方案，那么[Eagle](https://github.com/duyanghao/Eagle)就是首选
 
 # Refs
 
