--- a/_posts/2020-5-1-eagle.md
+++ b/_posts/2020-5-1-eagle.md
@@ -15,7 +15,7 @@ excerpt: ​本文介绍了自研P2P镜像分发解决方案 - Eagle
 * Dragonfly：采用supernode中心控制设计模式，所有的peer数据传输任务都由supernode负责调度，整个集群将管理集中在supernode组件
 * Kraken：采用随机分散设计模式，Tracker组件只负责管理所有peer的连接信息(包括各个peer拥有的数据)，而实际的数据传输流程则交由各个peer自行协商决定
 
-[Eagle](https://github.com/duyanghao/Eagle)参考了[Dragonfly](https://github.com/dragonflyoss/Dragonfly)，[Kraken](https://github.com/uber/kraken)以及[FID](https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8064123)的原理和特性。
+[Eagle](https://github.com/duyanghao/Eagle)充分参考了[Dragonfly](https://github.com/dragonflyoss/Dragonfly)，[Kraken](https://github.com/uber/kraken)以及[FID](https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8064123)的原理和特性。
 在上述项目基础上去掉了一些不必要特性，保留了最核心的组件和功能，精简而实用
 
 # 特性支持
@@ -27,7 +27,7 @@ excerpt: ​本文介绍了自研P2P镜像分发解决方案 - Eagle
 * SSI(Seeder Storage Interface)：`Eagle`对`Seeder`存储实现了插件式接口，用户可以根据SSI接口实现对接第三方存储(目前默认本地文件系统)
 * Host level speed limit：`Eagle`提供针对整个节点P2P下载和上传的网络限速功能
 * LRUCache delete policy：`Eagle`提供LRU算法实现Proxy测和Seeder测的磁盘回收功能，并提供参数限制Cache使用大小
-* Lightweight：`Eagle`由少数核心组件构成，理论上是P2P系统组件的最小集合，是轻量级解决方案
+* Lightweight：`Eagle`由少数核心组件构成，理论上是P2P系统组件的最小集合，属于轻量级的解决方案
 
 未来`Eagle`希望支持如下特性：
 
@@ -355,13 +355,15 @@ Tracker依次类推
 
 # Comparison With Other Projects
 
-目前社区最流行的P2P解决方案当属[Dragonfly](https://github.com/dragonflyoss/Dragonfly)，Dragonfly提供了许多生产环境需要使用的功能，比如：`断点续传`，`母机限速`以及`跨IDC解决方案`等。但是Dragonfly最大的问题就是它的supernode中心设计。在这种设计中，supernode需要管理整个P2P网络中的所有节点数据传输，理论上可以实现全局的最佳分配算法，但是确很难落地实现。所以实际使用中，随着镜像分层大小增加以及集群规模扩大，整个Dragonfly系统会线性变慢。另外Dragonfly不支持supernode节点的高可用部署，这也是致命的一个缺点
+目前社区最流行的P2P解决方案当属[Dragonfly](https://github.com/dragonflyoss/Dragonfly)，Dragonfly提供了许多生产环境需要使用的功能，比如：`断点续传`，`母机限速`以及`跨IDC解决方案`等。但是Dragonfly最大的问题就是它的supernode中心设计。在这种设计中，supernode需要管理整个P2P网络中的所有节点数据传输，虽然理论上可以实现全局的最佳分配算法，但是确很难落地实现。所以实际使用中，随着镜像分层大小增加以及集群规模扩大，整个Dragonfly系统会线性变慢。另外Dragonfly不支持supernode节点的高可用部署，这也是致命的一个缺点
 
-[Kraken](https://github.com/uber/kraken)在设计理论上区分于Dragonfly，采用了分散式设计。Tracker只负责管理各节点的连接信息，不负责具体的数据传输分配协商，虽然理论上可以更好地支持集群规模的快速增长。另外Kraken在BT协议基础上定制了传输协议，以更大程度提高传输效率
+[Kraken](https://github.com/uber/kraken)在设计理论上区分于Dragonfly，采用了分散式设计。Tracker只负责管理各节点的连接信息，不负责具体的数据传输分配协商，理论上可以更好地支持集群规模的快速增长。另外Kraken在BT协议基础上定制了传输协议，以更大程度提高传输效率
 
-相比Dragonfly和Kraken，Eagle原理简单，支持的特性有限。轻便，精简而实用
+Eagle在设计上采用了Kraken的随机分散式模式，并去掉了Kraken一些非核心组件；在功能支持上保留了Kraken和Dragonfly的优秀特性(例如：`SSI`以及`Host level speed limit`)。因此，相比Dragonfly和Kraken，Eagle原理更加简单，特性支持虽然有限，但轻便，精简且实用
 
-对于如何选择P2P解决方案，我的建议是：Dragonfly和Kraken功能都足够庞大，且在企业生产环境中均有落地，但是相应的运维成本也较大；而如果你想选择一个维护成本更小，更加轻量级的解决方案，那么[Eagle](https://github.com/duyanghao/Eagle)就是首选
+## Suggestion
+
+最后，对于如何选择P2P开源解决方案，我的建议是：Dragonfly和Kraken功能都足够强大，且在企业生产环境中均有落地，但是相应的运维成本也较大，所以如果是大型企业用户或者是付费用户则可以选择；但如果你想选择一个维护成本更小，更加轻量级的解决方案，那么[Eagle](https://github.com/duyanghao/Eagle)就是首选
 
 # Refs
 
