--- a/_posts/2020-5-1-eagle.md
+++ b/_posts/2020-5-1-eagle.md
@@ -34,7 +34,7 @@ excerpt: ​本文介绍了自研P2P镜像分发解决方案 - Eagle
 * Peer optimal arithmetic：`Eagle`希望实现基于网络拓扑的Peer优选算法，提高传输效率以及节省跨IDC带宽
 * Push notification mechanism：实现镜像上传同步更新到`Seeder` Cache，这样可以最大限度减少`Seeder`回源操作
 
-其中，`Peer optimal arithmetic`是目前所有开源项目都没有实现的特性(参考[#244](https://github.com/uber/kraken/issues/244)和[#1311](https://github.com/dragonflyoss/Dragonfly/issues/1311))，也是本项目的重点研究对象
+其中，`Peer optimal arithmetic`是目前所有开源项目都没有实现的特性(参考[Kraken #244](https://github.com/uber/kraken/issues/244)和[Dragonfly #1311](https://github.com/dragonflyoss/Dragonfly/issues/1311))，也是本项目的重点研究对象
 
 # 原理
 
@@ -351,11 +351,11 @@ Eagle参考[etcd clientv3-grpc1.23 Balancer](https://github.com/duyanghao/Eagle/
 
 ![](/public/img/eagle/ha/vip_ha.png)
 
-Tracker依次类推
+Tracker依此类推
 
 # Comparison With Other Projects
 
-目前社区最流行的P2P解决方案当属[Dragonfly](https://github.com/dragonflyoss/Dragonfly)，Dragonfly提供了许多生产环境需要使用的功能，比如：`断点续传`，`母机限速`以及`跨IDC解决方案`等。但是Dragonfly最大的问题就是它的supernode中心设计。在这种设计中，supernode需要管理整个P2P网络中的所有节点数据传输，虽然理论上可以实现全局的最佳分配算法，但是确很难落地实现。所以实际使用中，随着镜像分层大小增加以及集群规模扩大，整个Dragonfly系统会线性变慢。另外Dragonfly不支持supernode节点的高可用部署，这也是致命的一个缺点
+目前社区最流行的P2P解决方案当属[Dragonfly](https://github.com/dragonflyoss/Dragonfly)，Dragonfly提供了许多生产环境需要使用的功能，比如：`断点续传`，`母机限速`以及`跨IDC解决方案`等。但是Dragonfly最大的问题就是它的supernode中心设计。在这种设计中，supernode需要管理整个P2P网络中的所有节点数据传输，虽然理论上可以实现全局的最佳分配算法，但是却很难落地实现。所以实际使用中，随着镜像分层大小增加以及集群规模扩大，整个Dragonfly系统会线性变慢。另外Dragonfly不支持supernode节点的高可用部署，这也是致命的一个缺点
 
 [Kraken](https://github.com/uber/kraken)在设计理论上区分于Dragonfly，采用了分散式设计。Tracker只负责管理各节点的连接信息，不负责具体的数据传输分配协商，理论上可以更好地支持集群规模的快速增长。另外Kraken在BT协议基础上定制了传输协议，以更大程度提高传输效率
 
