--- a/_posts/2020-5-1-eagle.md
+++ b/_posts/2020-5-1-eagle.md
@@ -13,7 +13,7 @@ excerpt: ​本文介绍了自研P2P镜像分发解决方案 - Eagle
 - [特性支持](#特性支持)
 - [原理](#原理)
 - [实现](#实现)
-- [High Availability](#High Availability)
+- [High-Availability](#High-Availability)
 
 # Overview
 
@@ -335,7 +335,7 @@ func Run(flags *Flags) {
 }
 ```
 
-### High Availability
+### High-Availability
 
 #### 1. client-side
 
