--- a/_posts/2020-5-1-eagle.md
+++ b/_posts/2020-5-1-eagle.md
@@ -13,7 +13,7 @@ excerpt: ​本文介绍了自研P2P镜像分发解决方案 - Eagle
 - [特性支持](#特性支持)
 - [原理](#原理)
 - [实现](#实现)
-- [Comparison With Other Projects](#Comparison With Other Projects)
+- [Comparison With Other Projects](#Comparison)
 
 # Overview
 
@@ -361,7 +361,7 @@ Eagle参考[etcd clientv3-grpc1.23 Balancer](https://github.com/duyanghao/Eagle/
 
 Tracker依此类推
 
-# Comparison With Other Projects
+# Comparison
 
 目前社区最流行的P2P解决方案当属[Dragonfly](https://github.com/dragonflyoss/Dragonfly)，Dragonfly提供了许多生产环境需要使用的功能，比如：`断点续传`，`母机限速`以及`跨IDC解决方案`等。但是Dragonfly最大的问题就是它的supernode中心设计。在这种设计中，supernode需要管理整个P2P网络中的所有节点数据传输，虽然理论上可以实现全局的最佳分配算法，但是却很难落地实现。所以实际使用中，随着镜像分层大小增加以及集群规模扩大，整个Dragonfly系统会线性变慢。另外Dragonfly不支持supernode节点的高可用部署，这也是致命的一个缺点
 
