add http transport framework anslysis
Signed-off-by: duyanghao <1294057873@qq.com>

--- a/_posts/2020-5-1-eagle.md
+++ b/_posts/2020-5-1-eagle.md
@@ -3,7 +3,7 @@ layout: post
 title: 自研P2P镜像分发解决方案 - Eagle
 date: 2020-5-1 19:10:31
 category: 技术
-tags: Docker Docker-registry P2P golang
+tags: Docker Docker-registry P2P Golang
 excerpt: ​本文介绍了自研P2P镜像分发解决方案 - Eagle
 ---
 
