--- a/_posts/2019-11-8-db-bur.md
+++ b/_posts/2019-11-8-db-bur.md
@@ -7,6 +7,16 @@ tags: database bur
 excerpt: 在PaaS平台上，可能会部署各种数据库给业务使用，对于生产环境来说，除了尽可能保证这些服务的正常运行以及高可用外，还需要进行备份还原来保证极端情况下的数据恢复。本文汇总了常用数据库的备份还原方案，包括：Postgres，MongoDB，RabbitMQ，Redis以及MariaDB等……
 ---
 
+## Table of Contents
+
+* [前言](#前言)
+* [PostgreSQL备份还原方案](#一、PostgreSQL备份还原方案)
+* [MongoDB备份还原方案](#二、MongoDB备份还原方案)
+* [RabbitMQ备份还原方案](#三、RabbitMQ备份还原方案)
+* [Redis备份还原方案](#四、Redis备份还原方案)
+* [MariaDB备份还原方案](五、MariaDB备份还原方案)
+* [总结](#总结)
+
 ## 前言
 
 在PaaS平台上，可能会部署各种数据库给业务使用，对于生产环境来说，除了尽可能保证这些服务的正常运行以及高可用外，还需要进行备份还原来保证极端情况下的数据恢复
